--- a/index.html
+++ b/index.html
@@ -15,22 +15,35 @@
             <legend class="text-lg font-semibold mb-4">PS max</legend>
             <div class="space-y-2">
                 <label class="flex items-center">
-                    <input type="radio" name="ps_max" value="120" class="text-blue-600 focus:ring-blue-500">
+                    <input type="radio" name="ps_max" value="120" class="text-blue-600 focus:ring-blue-500" onclick="composeEmail(120)">
                     <span class="ml-2">120 bar</span>
                 </label>
                 <label class="flex items-center">
-                    <input type="radio" name="ps_max" value="130" class="text-blue-600 focus:ring-blue-500">
+                    <input type="radio" name="ps_max" value="130" class="text-blue-600 focus:ring-blue-500" onclick="composeEmail(130)">
                     <span class="ml-2">130 bar</span>
                 </label>
                 <label class="flex items-center">
-                    <input type="radio" name="ps_max" value="140" class="text-blue-600 focus:ring-blue-500">
+                    <input type="radio" name="ps_max" value="140" class="text-blue-600 focus:ring-blue-500" onclick="composeEmail(140)">
                     <span class="ml-2">140 bar</span>
                 </label>
             </div>
         </fieldset>
     </div>
     <script>
-        // Any additional JavaScript can be included here
+        function composeEmail(choice) {
+            // Definisci il destinatario (sostituisci con il tuo indirizzo email reale)
+            var destinatario = "pippo@gmail.it";
+
+            // Crea il soggetto e il corpo del messaggio
+            var soggetto = "Scelta del PS max";
+            var corpoMessaggio = "Hai selezionato " + choice + " bar come PS max.";
+
+            // Costruisci l'URL `mailto` con i parametri desiderati
+            var url = "mailto:" + destinatario + "?subject=" + encodeURIComponent(soggetto) + "&body=" + encodeURIComponent(corpoMessaggio);
+
+            // Apri il link `mailto` per avviare il client di posta elettronica predefinito
+            window.location.href = url;
+        }
     </script>
 </body>
 </html>
