--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     </div>
     <script>
         function composeEmail(choice) {
+            
+            console.log("Clic su", choice); // Aggiunto per debugging
+            
             // Definisci il destinatario (sostituisci con il tuo indirizzo email reale)
             var destinatario = "pippo@gmail.it";
 
