--- a/index.html
+++ b/index.html
@@ -3,50 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pressure Setting Selection</title>
+    <title>Gascooler Selection Form</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Additional styles if needed */
     </style>
 </head>
-<body class="bg-gray-100">
-    <div class="max-w-md mx-auto my-10 p-6 bg-white shadow-md rounded">
-        <fieldset>
-            <legend class="text-lg font-semibold mb-4">PS max</legend>
-            <div class="space-y-2">
-                <label class="flex items-center">
-                    <input type="radio" name="ps_max" value="120" class="text-blue-600 focus:ring-blue-500" onclick="composeEmail(120)">
-                    <span class="ml-2">120 bar</span>
-                </label>
-                <label class="flex items-center">
-                    <input type="radio" name="ps_max" value="130" class="text-blue-600 focus:ring-blue-500" onclick="composeEmail(130)">
-                    <span class="ml-2">130 bar</span>
-                </label>
-                <label class="flex items-center">
-                    <input type="radio" name="ps_max" value="140" class="text-blue-600 focus:ring-blue-500" onclick="composeEmail(140)">
-                    <span class="ml-2">140 bar</span>
-                </label>
+<body class="bg-gray-50">
+    <div class="container mx-auto p-8">
+        <h1 class="text-2xl font-bold mb-6">Gascooler Selection</h1>
+        <form>
+            <div class="mb-4">
+                <label for="projectName" class="block text-gray-700 text-sm font-bold mb-2">Nome commessa</label>
+                <input type="text" id="projectName" name="projectName" placeholder="Nome commessa" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
             </div>
-        </fieldset>
+            <div class="mb-4">
+                <label for="orderNumber" class="block text-gray-700 text-sm font-bold mb-2">Numero Commessa / Anno</label>
+                <input type="text" id="orderNumber" name="orderNumber" placeholder="Numero commessa / Anno" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
+            </div>
+            <div class="mb-4">
+                <label for="deliveredIn" class="block text-gray-700 text-sm font-bold mb-2">Delivered in</label>
+                <input type="date" id="deliveredIn" name="deliveredIn" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
+            </div>
+            <fieldset class="mb-4">
+                <legend class="text-gray-700 text-sm font-bold mb-2">PS max</legend>
+                <label class="block"><input type="radio" name="psMax" value="120" class="mr-2">120 bar</label>
+                <label class="block"><input type="radio" name="psMax" value="130" class="mr-2">130 bar</label>
+                <label class="block"><input type="radio" name="psMax" value="140" class="mr-2">140 bar</label>
+            </fieldset>
+            <fieldset class="mb-4">
+                <legend class="text-gray-700 text-sm font-bold mb-2">Treatment</legend>
+                <label class="block"><input type="radio" name="treatment" value="standard" class="mr-2">Standard</label>
+                <label class="block"><input type="radio" name="treatment" value="epoxy" class="mr-2">Epoxy</label>
+                <label class="block"><input type="radio" name="treatment" value="almg" class="mr-2">AlMg</label>
+                <label class="block"><input type="radio" name="treatment" value="ktl" class="mr-2">KTL</label>
+                <label class="block"><input type="radio" name="treatment" value="other" class="mr-2">Other...</label>
+            </fieldset>
+            <fieldset class="mb-6">
+                <legend class="text-gray-700 text-sm font-bold mb-2">Kit Spry</legend>
+                <label class="block"><input type="radio" name="kitSpry" value="yes" class="mr-2">YES</label>
+                <label class="block"><input type="radio" name="kitSpry" value="no" class="mr-2">NO</label>
+            </fieldset>
+            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Submit</button>
+        </form>
     </div>
     <script>
-        function composeEmail(choice) {
-            
-            console.log("Clic su", choice); // Aggiunto per debugging
-            
-            // Definisci il destinatario (sostituisci con il tuo indirizzo email reale)
-            var destinatario = "pippo@gmail.it";
-
-            // Crea il soggetto e il corpo del messaggio
-            var soggetto = "Scelta del PS max";
-            var corpoMessaggio = "Hai selezionato " + choice + " bar come PS max.";
-
-            // Costruisci l'URL `mailto` con i parametri desiderati
-            var url = "mailto:" + destinatario + "?subject=" + encodeURIComponent(soggetto) + "&body=" + encodeURIComponent(corpoMessaggio);
-
-            // Apri il link `mailto` per avviare il client di posta elettronica predefinito
-            window.location.href = url;
-        }
+        // Additional scripts if needed
     </script>
 </body>
 </html>
