--- a/index.html
+++ b/index.html
@@ -105,26 +105,27 @@
     </div>
 
     <script>
-        document.getElementById('otherTreatment').addEventListener('change', function() {
-            document.getElementById('otherTreatmentText').classList.toggle('hidden');
-        });
+    document.getElementById('gascoolerForm').addEventListener('submit', function(event) {
+    event.preventDefault();
+    const formData = new FormData(event.target);
+    const formProps = Object.fromEntries(formData);
+    const deliveryDate = formData.get('deliveredIn');
+    formProps['Delivery Date'] = deliveryDate ? new Date(deliveryDate).toLocaleDateString() : '';
 
-        document.getElementById('gascoolerForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const formData = new FormData(event.target);
-            const formProps = Object.fromEntries(formData);
-            const deliveryDate = formData.get('deliveredIn');
-            formProps['Delivery Date'] = deliveryDate ? new Date(deliveryDate).toLocaleDateString() : '';
+    // Aggiungi il nome della commessa all'oggetto della mail
+    const orderName = formData.get('nomeCommessa');
+    const subject = `Gascooler Order: ${orderName}`;
 
-            // Construct email body
-            let emailBody = `To: acquisti@enex.it\nSubject: Gascooler Selection\n\n`;
-            for (const [key, value] of Object.entries(formProps)) {
-                emailBody += `${key}: ${value}\n`;
-            }
+    // Construct email body
+    let emailBody = `To: acquisti@enex.it\nSubject: ${subject}\n\n`;
+    for (const [key, value] of Object.entries(formProps)) {
+        emailBody += `${key}: ${value}\n`;
+    }
 
-            // Open default email client
-            window.location.href = `mailto:acquisti@enex.it?subject=Gascooler Selection&body=${encodeURIComponent(emailBody)}`;
-        });
+    // Open default email client
+    window.location.href = `mailto:acquisti@enex.it?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(emailBody)}`;
+});
+        
     </script>
 </body>
 </html>
