--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gascooler Selection Form</title>
+    <title>Gascooler Selection Form 2 </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
@@ -68,44 +68,18 @@
     </div>
 
     <script>
-        document.querySelectorAll('.treatment').forEach(radio => {
-            radio.addEventListener('change', function() {
-                if (this.value === 'Other') {
-                    document.getElementById('otherTreatment').classList.remove('hidden');
-                } else {
-                    document.getElementById('otherTreatment').classList.add('hidden');
-                }
-                document.getElementById('gascoolerForm').querySelectorAll('input[type=radio]').forEach(el => {
-                    if (el.checked && el.value !== 'Standard') {
-                        el.parentElement.classList.add('highlight');
-                    } else {
-                        el.parentElement.classList.remove('highlight');
-                    }
-                });
-            });
-        });
+document.getElementById('gascoolerForm').addEventListener('submit', function(event) {
+    event.preventDefault();
+    const formData = new FormData(this);
 
-        document.querySelectorAll('.kitSpry').forEach(radio => {
-            radio.addEventListener('change', function() {
-                document.getElementById('gascoolerForm').querySelectorAll('input[type=radio]').forEach(el => {
-                    if (el.checked && el.value === 'YES') {
-                        el.parentElement.classList.add('highlight-special');
-                    } else {
-                        el.parentElement.classList.remove('highlight-special');
-                    }
-                });
-            });
-        });
+    let body = '';
+    formData.forEach((value, key) => {
+        body += key + ': ' + value + '\n';
+    });
 
-        document.getElementById('gascoolerForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const formData = new FormData(this);
-            let body = 'Delivery Date: ' + formData.get('deliveryDate') + '\n';
-            formData.forEach((value, key) => {
-                body += key + ': ' + value + '\n';
-            });
-            window.location.href = 'mailto:acquisti@enex.it?subject=Gascooler Selection&body=' + encodeURIComponent(body);
-        });
+    window.location.href = 'mailto:acquisti@enex.it?subject=Gascooler Selection&body=' + encodeURIComponent(body);
+});
+
     </script>
 </body>
 </html>
