--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gascooler Selection Form 2 </title>
+    <title>Gascooler Selection Form 3 </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
@@ -69,40 +69,41 @@
 
     <script>
 
-        // dovrebbe gestire la costruzione dellla mail
     document.getElementById('gascoolerForm').addEventListener('submit', function(event) {
-    event.preventDefault();
-    const formData = new FormData(this);
+        event.preventDefault();
+        const formData = new FormData(this);
+        let body = '';
 
-    let body = '';
-    formData.forEach((value, key) => {
-        body += key + ': ' + value + '\n';
-    });
-
-    window.location.href = 'mailto:acquisti@enex.it?subject=Gascooler Selection&body=' + encodeURIComponent(body);
-    });
-
-
-    
-        // Gestisce la parte other
-        document.querySelectorAll('.treatment').forEach(radio => {
-            radio.addEventListener('change', function() {
-                if (this.value === 'Other') {
-                    document.getElementById('otherTreatment').classList.remove('hidden');
-                } else {
-                    document.getElementById('otherTreatment').classList.add('hidden');
-                }
-                document.getElementById('gascoolerForm').querySelectorAll('input[type=radio]').forEach(el => {
-                    if (el.checked && el.value !== 'Standard') {
-                        el.parentElement.classList.add('highlight');
-                    } else {
-                        el.parentElement.classList.remove('highlight');
-                    }
-                });
-            });
+        // Aggiungi questo blocco di codice per gestire i campi di testo
+        this.querySelectorAll('input[type="text"]').forEach(input => {
+            body += input.name + ': ' + input.value + '\n';
         });
 
-        
+        formData.forEach((value, key) => {
+            body += key + ': ' + value + '\n';
+        });
+
+        window.location.href = 'mailto:acquisti@enex.it?subject=Gascooler Selection&body=' + encodeURIComponent(body);
+    });
+
+    document.querySelectorAll('.treatment').forEach(radio => {
+        radio.addEventListener('change', function() {
+            if (this.value === 'Other') {
+                document.getElementById('otherTreatment').classList.remove('hidden');
+            } else {
+                document.getElementById('otherTreatment').classList.add('hidden');
+            }
+            document.getElementById('gascoolerForm').querySelectorAll('input[type=radio]').forEach(el => {
+                if (el.checked && el.value !== 'Standard') {
+                    el.parentElement.classList.add('highlight');
+                } else {
+                    el.parentElement.classList.remove('highlight');
+                }
+            });
+        });
+    });
+
+ 
     </script>
 </body>
 </html>
