--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <input type="text"  name="nomeCommessa" placeholder="Quantity" class="border p-2 rounded" />
                 </div>
                 <div class="mb-4">
-                    <label for="deliveryDate"  name="nomeCommessa"  class="block mb-2">Delivered for the day:</label>
+                    <label for="deliveryDate"   class="block mb-2">Delivered for the day:</label>
                     <input type="date" id="deliveryDate" class="border p-2 rounded w-full" />
                 </div>
                 <div class="mb-4">
