--- a/index.html
+++ b/index.html
@@ -93,13 +93,14 @@
             } else {
                 document.getElementById('otherTreatment').classList.add('hidden');
             }
-            document.getElementById('gascoolerForm').querySelectorAll('input[type=radio]').forEach(el => {
-                if (el.checked && el.value !== 'Standard') {
-                    el.parentElement.classList.add('highlight');
-                } else {
-                    el.parentElement.classList.remove('highlight');
-                }
-            });
+            
+            //document.getElementById('gascoolerForm').querySelectorAll('input[type=radio]').forEach(el => {
+                //if (el.checked && el.value !== 'Standard') {
+                   // el.parentElement.classList.add('highlight');
+                //} else {
+                    //el.parentElement.classList.remove('highlight');
+                //}
+            //});
         });
     });
 
